--- a/client/main.css
+++ b/client/main.css
@@ -1,27 +1,24 @@
 div.podium{
     margin: auto;
-    width: 60% !important;
+    width: 80% !important;
 }
 
 
 div.first{
     background-color: yellow;
     color: yellow;
-    margin-top: 5px;
     padding-bottom: 80px !important;
 }
 
 div.second{
     background-color: red;
     color: red;
-    margin-top: 5px;
     padding-bottom: 40px !important;
 }
 
 div.third{
     background-color: blue;
     color: blue;
-    margin-top: 5px;
     padding-bottom: 20px !important;
 }
 div.pad{
@@ -37,3 +34,6 @@ div.third_content{
     margin-top: 60px;
 }
 
+div.row{
+    margin-bottom: 5px !important;
+}
