--- a/client/main.css
+++ b/client/main.css
@@ -37,3 +37,11 @@ div.third_content{
 div.row{
     margin-bottom: 5px !important;
 }
+
+a:hover{
+    text-decoration: underline;
+}
+
+input#fotoNueva{
+    color:white;
+}
