--- a/client/main.css
+++ b/client/main.css
@@ -38,10 +38,31 @@ div.row{
     margin-bottom: 5px !important;
 }
 
-a:hover{
-    text-decoration: underline;
-}
+
 
 input#fotoNueva{
     color:white;
+}
+
+.contricante{
+    text-align: center;
+}
+
+[type="radio"]:disabled:checked+span:after{
+    background-color: #26a69a !important;
+    border: 2px solid #26a69a !important;
+}
+
+[type="checkbox"]:checked:disabled+span:before{
+    border-right: 2px solid #26a69a !important;
+    border-bottom: 2px solid #26a69a !important;
+}
+
+h6{
+    color: black !important;
+}
+
+.noneBg{
+    color: #db2828!important;
+    background-color: transparent !important;
 }
