bugo del registro fixed, bug de pregutnas aceptadas en perfil fixed, cambio de nombre en archivos para mejorar el entendimiento

--- a/client/main.css
+++ b/client/main.css
@@ -66,3 +66,8 @@ h6{
     color: #db2828!important;
     background-color: transparent !important;
 }
+
+.under:hover{
+    text-decoration: underline;
+    cursor:pointer!important;
+}
